RESOLVED FIXED99882
[chromium] Suppress compositor invalidations during FrameView recreation in force-compositing-mode
https://bugs.webkit.org/show_bug.cgi?id=99882
Summary [chromium] Suppress compositor invalidations during FrameView recreation in f...
James Robinson
Reported 2012-10-19 16:08:57 PDT
[chromium] Suppress compositor invalidations during FrameView recreation in force-compositing-mode
Attachments
Patch (5.87 KB, patch)
2012-10-19 16:48 PDT, James Robinson
no flags
Patch for landing (5.89 KB, patch)
2012-10-22 19:09 PDT, James Robinson
no flags
James Robinson
Comment 1 2012-10-19 16:48:07 PDT
Adrienne Walker
Comment 2 2012-10-22 12:53:57 PDT
Comment on attachment 169723 [details] Patch R=me.
WebKit Review Bot
Comment 3 2012-10-22 13:01:19 PDT
Comment on attachment 169723 [details] Patch Rejecting attachment 169723 [details] from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 2 Last 500 characters of output: e/WebKit/chromium/src/WebFrameImpl.cpp.rej patching file Source/WebKit/chromium/src/WebViewImpl.cpp Hunk #2 succeeded at 3756 (offset -9 lines). Hunk #3 succeeded at 3769 (offset -9 lines). Hunk #4 succeeded at 3794 (offset -9 lines). Hunk #5 succeeded at 4093 (offset -9 lines). patching file Source/WebKit/chromium/src/WebViewImpl.h Failed to run "[u'/mnt/git/webkit-commit-queue/Tools/Scripts/svn-apply', u'--force', u'--reviewer', u'Adrienne W..." exit_code: 1 cwd: /mnt/git/webkit-commit-queue Full output: http://queues.webkit.org/results/14492572
James Robinson
Comment 4 2012-10-22 19:09:26 PDT
Created attachment 170042 [details] Patch for landing
WebKit Review Bot
Comment 5 2012-10-22 19:58:28 PDT
Comment on attachment 170042 [details] Patch for landing Clearing flags on attachment: 170042 Committed r132173: <http://trac.webkit.org/changeset/132173>
WebKit Review Bot
Comment 6 2012-10-22 19:58:31 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.